# digit_recognition

./: digitrecog_model.h5  main.py  pyproject.toml  readme.md
