[tool.poetry]
name = "repl_python3_beta_digitrecognition"
version = "0.1.0"
description = ""
authors = ["Masiluy <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
